# circle_playground

./: Dockerfile  cloudbuild_valuator.yaml  pyproject.toml
.circleci/: config.yml  config2.yaml
decoder/: main.py
terraform/: iam.tf  out  outputs.tf  terraform.tfstate  terraform.tfstate.backup
