[tool.poetry]
name = "circle-playground"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
# api related packages
panaetius = "^2.3.5"
fastapi = "^0.85.2"
uvicorn = "^0.23.2"
gunicorn = "^20.1.0"
python = ">=3.9, <4"
# testing related packages
pytest = "~7.4.2"
# decoder related packages
pandas = "^1.5.1"
scikit-learn = "~1.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
